--- a/static/index.html
+++ b/static/index.html
@@ -18,34 +18,20 @@
     height: auto;
     width: 0;
   }
+  #drop_zone {
+    width: 100%;
+    height: 300px;
+    border: 1px dashed gray;
+  }
 </style>
 
-<input type="file" id="files" name="file" />
-<button onclick="abortRead();">Cancel read</button>
+
+<a href="/download">Download</a>
+<div id="drop_zone">Drop files here</div>
 <div id="progress_bar"><div class="percent">0%</div></div>
 
 <script>
-  var reader;
   var progress = document.querySelector('.percent');
-
-  function abortRead() {
-    reader.abort();
-  }
-
-  function errorHandler(evt) {
-    switch(evt.target.error.code) {
-      case evt.target.error.NOT_FOUND_ERR:
-        alert('File Not Found!');
-        break;
-      case evt.target.error.NOT_READABLE_ERR:
-        alert('File is not readable');
-        break;
-      case evt.target.error.ABORT_ERR:
-        break; // noop
-      default:
-        alert('An error occurred reading this file.');
-    };
-  }
 
   function updateProgress(evt) {
     // evt is an ProgressEvent.
@@ -60,34 +46,41 @@
   }
 
   function handleFileSelect(evt) {
+    evt.stopPropagation();
+    evt.preventDefault();
+
     // Reset progress indicator on new file selection.
     progress.style.width = '0%';
     progress.textContent = '0%';
 
-    reader = new FileReader();
-    reader.onerror = errorHandler;
-    reader.onprogress = updateProgress;
-    reader.onabort = function(e) {
-      alert('File read cancelled');
-    };
-    reader.onloadstart = function(e) {
-      document.getElementById('progress_bar').className = 'loading';
-    };
-    reader.onload = function(e) {
-      // Ensure that the progress bar displays 100% at the end.
-      progress.style.width = '100%';
-      progress.textContent = '100%';
-      setTimeout("document.getElementById('progress_bar').className='';", 2000);
-
-      var xhr = new XMLHttpRequest();
-      xhr.open('POST', '/upload');
-      xhr.setRequestHeader("Content-type", "application/json");
-      xhr.send(JSON.stringify({file: e.target.result}));
+    var files = evt.dataTransfer.files;
+    var formData = new FormData();
+    for (var i = 0, f; f = files[i]; i++) {
+      formData.append('file', f);
     }
 
-    // Read in the image file as a binary string.
-    reader.readAsBinaryString(evt.target.files[0]);
+    // now post a new XHR request
+    var xhr = new XMLHttpRequest();
+    xhr.open('POST', '/upload');
+    xhr.onload = function () {
+      if (xhr.status === 200) {
+        progress.style.width = '100%';
+        progress.textContent = '100%';
+      }
+    };
+    document.getElementById('progress_bar').className = 'loading';
+    xhr.upload.onprogress = updateProgress;
+
+    xhr.send(formData);
   }
 
-  document.getElementById('files').addEventListener('change', handleFileSelect, false);
+  function handleDragOver(evt) {
+      evt.stopPropagation();
+      evt.preventDefault();
+      evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
+    }
+
+  var dropZone = document.getElementById('drop_zone');
+  dropZone.addEventListener('dragover', handleDragOver, false);
+  dropZone.addEventListener('drop', handleFileSelect, false);
 </script>
